--- a/.env
+++ b/.env
@@ -28,5 +28,6 @@ APP_SECRET=d248625e2dfbc1cf5e86e57754cd15ba
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+# DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root@127.0.0.1:3306/Connexion?charset=utf8"
 ###< doctrine/doctrine-bundle ###
